<resources>
    <string name="app_name">SolarSystemQuiz</string>
    <string name="solar_system">The Solar System</string>
    <string name="scroll_title">The Solar System</string>
    <string name="scroll_subtitle">Quizz App</string>
    <string name="scroll_text1">The Solar System application is an astronomy quizz designed for everyone. It contains a number of 10 questions. The questions are mainly general curiosities ot fun facts about our Solar System. </string>
    <string name="scroll_text2">For most of history, humanity did not recognize or understand the concept of the Solar System. Most people up to the Late Middle Ages–Renaissance believed Earth to be stationary at the centre of the universe and categorically different from the divine or ethereal objects that moved through the sky. Although the Greek philosopher Aristarchus of Samos had speculated on a heliocentric reordering of the cosmos, Nicolaus Copernicus was the first to develop a mathematically predictive heliocentric system. In the 17th century, Galileo Galilei, Johannes Kepler, and Isaac Newton developed an understanding of physics that led to the gradual acceptance of the idea that Earth moves around the Sun and that the planets are governed by the same physical laws that governed Earth.</string>
    <string name="scroll_text3" formatted="false">The principal component of the Solar System is the Sun, a G2 main-sequence star that contains 99.86% of the system\'s known mass and dominates it gravitationally. The Sun\'s four largest orbiting bodies, the giant planets, account for 99% of the remaining mass, with Jupiter and Saturn together comprising more than 90%. The remaining objects of the Solar System (including the four terrestrial planets, the dwarf planets, moons, asteroids, and comets) together comprise less than 0.002% of the Solar System\'s total mass.</string>
    <string name="scroll_text4">To find more and check your knowledge about the our Solar System, please take the next adventure by solving the quizz.</string>
    <string name="Q1">Question 1</string>
    <string name="Q2">Question 2</string>
    <string name="Q3">Question 3</string>
    <string name="Q4">Question 4</string>
    <string name="Q5">Question 5</string>
    <string name="Q6">Question 6</string>
    <string name="Q7">Question 7</string>
    <string name="Q8">Question 8</string>
    <string name="Q9">Question 9</string>
    <string name="Q10">Question 10</string>
    <string name="Question1">Many ancient astronomers believed that:</string>
    <string name="Question2">Which planet is so light that it could float in water:</string>
    <string name="Question3">What is the brightest planet in the night sky:</string>
    <string name="Question4">When can a solar eclipse occur?</string>
    <string name="Question5">Which planets have rings?</string>
    <string name="Question6">Which of these phenomena occurs on Mars?</string>
    <string name="Question7">Which feature distinguishes Uranus from other planets?</string>
    <string name="Question8">How will the solar system die in approximately five billion years from now on?</string>
    <string name="Question9">Which planets in our solar system have volcanoes on their surface?</string>
    <string name="Question10">What is the sun?</string>
    <string name="OneA">the Sun was the center of the universe (heliocentric model)</string>
    <string name="OneB">Earth was a \u0022wanderer\u0022</string>
    <string name="OneC">Earth was the center of the universe (geocentric model)</string>
    <string name="TwoA">Mercury</string>
    <string name="TwoB">Neptune</string>
    <string name="TwoC">Saturn</string>
    <string name="ThreeA">Mercury</string>
    <string name="ThreeB">The Moon</string>
    <string name="ThreeC">Venus</string>
    <string name="FourA">during a new moon</string>
    <string name="FourB">during a full moon</string>
    <string name="FourC">in the last quarter of a full moon</string>
    <string name="FiveA">Saturn, Jupiter, Uranus and Neptune</string>
    <string name="FiveB">Saturn and Uranus</string>
    <string name="FiveC">Saturn and Neptune</string>
    <string name="SixA">Dust storms</string>
    <string name="SixB">Tidal waves</string>
    <string name="SixC">Hurricanes</string>
    <string name="SevenA">It is the farthest planet from the sun</string>
    <string name="SevenB">It is the largest planet</string>
    <string name="SevenC">It is tilted over on its side</string>
    <string name="EightA">The sun will lose its gravity, and the plantes will get lost in space</string>
    <string name="EightB">The sun will suddenly go out, leaving the Earth in the dark to become cold and icy</string>
    <string name="EightC">The sun will slowly become bigger, perhaps even swallowing the Earth, then shrink away to almost nothing</string>
    <string name="NineA">Earth, Io (a moon of Jupiter), Triton (a moon of Neptune), Enceladus (a moon of Saturn)</string>
    <string name="NineB">Earth, Mars, Venus</string>aturn
    <string name="NineC">Earth, Jupiter, Pluto</string>
    <string name="TenA">A star</string>
    <string name="TenB">A planet</string>
    <string name="TenC">A galaxy</string>
    <string name="return_button">return</string>
    <string name="done_button">done</string>
    <string name="info">info</string>
    <string name="watch">watch</string>
    <string name="title_activity_calculate_score">CalculateScore</string>
</resources>
