<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_planets_size"
    android:background="@color/black"
    style="@style/MatchParent"
    tools:context="com.example.android.solarsystemquiz.PlanetsSize">

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/VerticalLayout">

        <TextView
            style="@style/WrapContent.SansSerifOrange.QuestionTitle"
            android:layout_gravity="center_horizontal"
            android:text="@string/Q2" />

        <TextView
            style="@style/WrapContent.SansSerifWhite.QuestionText"
            android:text="@string/Question2" />

        <RadioGroup
            style="@style/VerticalLayout"
            android:id="@+id/secondQuestion">

            <RadioButton
                android:id="@+id/twoA"
                style="@style/WrapContent.RadioButton"
                android:text="@string/TwoA" />

            <RadioButton
                android:id="@+id/twoB"
                style="@style/WrapContent.RadioButton"
                android:text="@string/TwoB" />

            <RadioButton
                android:id="@+id/twoC"
                style="@style/WrapContent.RadioButton"
                android:text="@string/TwoC" />
        </RadioGroup>

    </LinearLayout>

    <ImageView
        style="@style/Image"
       android:src="@drawable/allplanets"/>

    <ImageButton
        android:id="@+id/done"
        style="@style/WrapContent.CheckVector"
        android:onClick="startBrightestPlanet" />

    <ImageButton
        android:id="@+id/cancel"
        style="@style/WrapContent.ClearVector"
        android:onClick="startDiscoveryAndExploration" />
</RelativeLayout>
